--- a/app/src/main/res/layout/admin_fragment_manageuser.xml
+++ b/app/src/main/res/layout/admin_fragment_manageuser.xml
@@ -14,8 +14,9 @@
         android:layout_gravity="center_horizontal"
         android:background="#2051E5"
         android:minHeight="?attr/actionBarSize"
+        android:textAlignment="center"
         android:theme="?attr/actionBarTheme"
-        app:title="Registered User Account"
+        app:title="Manage User Control"
         app:titleMarginStart="82dp"
         app:titleTextColor="#FFFFFF" />
 
