--- a/app/src/main/res/layout/layout_adminhome_activitylist.xml
+++ b/app/src/main/res/layout/layout_adminhome_activitylist.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +11,7 @@
     android:background="#FFFFFF"
     android:clickable="true"
     android:foreground="?selectableItemBackground"
-    android:theme="@style/Theme.User"
+    android:theme="@style/Theme.Admin"
     android:visibility="visible"
     card_view:cardBackgroundColor="#FFFF"
     card_view:cardCornerRadius="8dp"
@@ -53,27 +54,36 @@
             card_view:layout_constraintTop_toBottomOf="@+id/userListActivityNameView" />
 
 
-
-
         <Button
-            android:id="@+id/userListActivityDonateButton"
+            android:id="@+id/userListActivityAproveButton"
             android:layout_width="109dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/user_button"
             android:hapticFeedbackEnabled="true"
-            android:text="@string/user_home_donateButton"
+            android:text="Approve"
             android:textColor="#FFFFFF"
             android:textColorHighlight="#A5A5A5"
             android:textColorHint="#636363"
             card_view:cornerRadius="@dimen/buttonRadius"
-            card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.824"
-            card_view:layout_constraintStart_toEndOf="@+id/userListActivityCreatorView"
-            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityNameView"
-            card_view:layout_constraintVertical_bias="0.0" />
+            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityTtlRequiredView" />
+
+        <Button
+            android:id="@+id/userListActivityRejectButton"
+            android:layout_width="110dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/user_button"
+            android:hapticFeedbackEnabled="true"
+            android:text="Reject"
+            android:textColor="#FFFFFF"
+            android:textColorHighlight="#A5A5A5"
+            android:textColorHint="#636363"
+            card_view:cornerRadius="@dimen/buttonRadius"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityAproveButton" />
 
         <TextView
             android:id="@+id/userListActivityIdView"
@@ -106,19 +116,31 @@
             android:id="@+id/userListActivityDescriptionView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="1dp"
             android:text="Description"
-            android:visibility="gone"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityDonateButton" />
+            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityNameView" />
+
+
+        <TextView
+            android:id="@+id/userListActivityTtlRequiredViewLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:text="Total Required"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityDescriptionView" />
 
         <TextView
             android:id="@+id/userListActivityTtlRequiredView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:text="Total Required"
-            android:visibility="gone"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityDonateButton" />
+            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityTtlRequiredViewLabel" />
 
         <TextView
             android:id="@+id/userListActivityDonationReceivedView"
@@ -127,7 +149,7 @@
             android:text="Donation Received"
             android:visibility="gone"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/userListActivityDonateButton" />
+            card_view:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
